# test

./: CMakeLists.txt  blabla.txt
.github/workflows/: build-and-lint.yml  tests.yml
src/: csv.c  main.c
tests/: expected2.txt  expected3.txt  expected4.txt  input2.csv  input4.csv  testCsv.c
